# parkbox2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
res/shaders/: common.glsl  composite.fs  copy.fs  cubemap.vs  cull.comp  equirectangular_to_cubemap.fs  fullscreen.vs  gtao.fs  hbao.fs  irradiance.comp  pbr.fs  pbr.glsl  pbr.vs  pbr_textured.glsl  prefilter.comp  prepass.fs  prepass.vs  resolve.fs  shadow.fs  shadow.vs  shadow_accum.fs
res/textures/: tiergarten_2k_irrad.hdr
src/: cache.hpp  def.hpp  delegate.hpp  helpers.hpp  impl.cpp  main.cpp  signal.hpp
src/gfx/: allocator.cpp  allocator.hpp  cmd_pool.cpp  cmd_pool.hpp  composite.cpp  composite.hpp  context.cpp  context.hpp  deletion_queue.cpp  deletion_queue.hpp  descriptor_cache.cpp  descriptor_cache.hpp  frame_context.cpp  frame_context.hpp  gfx_pass.hpp  indirect.cpp  indirect.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  pbr.cpp  pbr.hpp  pipeline_cache.cpp  pipeline_cache.hpp  prepass.cpp  prepass.hpp  render_graph.cpp  render_graph.hpp  renderer.cpp  renderer.hpp  resolve.cpp  resolve.hpp  rt_cache.cpp  rt_cache.hpp  sampler_cache.cpp  sampler_cache.hpp  scene.cpp  scene.hpp  shader_cache.cpp  (+10 more)
src/world/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  meshlib.cpp  meshlib.hpp  passive.cpp  passive.hpp  plant.cpp  plant.hpp  viz.cpp  viz.hpp  world.cpp  world.hpp
